Add a loading animation to components whose data come from cookies

--- a/index.html
+++ b/index.html
@@ -25,14 +25,16 @@
                 <button class="counter-adjust-btn" onclick="decrement();">-</button>
 
                 <span style="font-size: 15vh;" id="rowCounter">
-                    001
+                    <span class="iconify rotate" data-icon="mdi:loading"></span>
                 </span>
 
                 <button class="counter-adjust-btn" onclick="increment();">+</button>
             </div>
 
             Last Change: <br />
-            <span id="lastPressed">Never</span>
+            <span id="lastPressed">
+                <span class="iconify rotate" data-icon="mdi:loading"></span>
+            </span>
 
         </div>
 
